# Semester-Project

./: .gitignore  README.md
skye_controls/: CMakeLists.txt  Doxyfile  package.xml  package.xml~  positioncontroller.cpp  skye_controls.yaml  skye_controls.yaml~
skye_controls/bags/: 2016-06-02-17-27-11.bag  2016-06-03-10-26-57.bag  2016-06-03-10-28-34.bag  2016-06-03-10-51-50.bag  2016-06-03-11-05-11.bag
skye_controls/cfg/: config.cfg~  skyeControls.cfg~  skye_params.cfg  skye_params.cfg~
skye_controls/doc/html/: action__skye_8h_source.html  annotated.html  class_actions__skye-members.html  class_actions__skye.html  class_pose_controller_node-members.html  class_pose_controller_node.html  class_skye-members.html  class_skye.html  class_skye_geometric_controller-members.html  class_skye_geometric_controller.html  class_waypoint_controller-members.html  class_waypoint_controller.html  class_waypoints_parser-members.html  class_waypoints_parser.html  classes.html  classgazebo_1_1_gazebo_blimp_au_plugin-members.html  classgazebo_1_1_gazebo_blimp_au_plugin.html  classgazebo_1_1_gazebo_blimp_dynamics_plugin-members.html  classgazebo_1_1_gazebo_blimp_dynamics_plugin.html  classgazebo_1_1_gazebo_blimp_wrench_plugin-members.html  classgazebo_1_1_gazebo_blimp_wrench_plugin.html  classgazebo_1_1_gazebo_body_wrench-members.html  classgazebo_1_1_gazebo_body_wrench.html  classgazebo_1_1_transfer_function-members.html  classgazebo_1_1_transfer_function.html  classskye__ros_1_1_skye_ros-members.html  classskye__ros_1_1_skye_ros.html  common_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_0750887149e4dfb2b0723b1edc44f642.html  dir_0885ed469d303dc95330699b83ca03b9.html  dir_0aacf3aed1a5c7085b23ed9486273ee2.html  dir_10845f92c03541d4c0858c20a249c16c.html  dir_115b4d7181bb855be1b4efe6b1735dfd.html  dir_18ae7af74d885898b85cbb543ae51b63.html  dir_2548138e51ae2e82f035b0956dca7667.html  dir_27e9bd539cc6454659407f6ca4a43990.html  dir_2a447b880e2f99303417c746a5f7a57b.html  dir_2d1642334f9e9ce4ca99f73941aaec31.html  dir_3133b4fbd041a93fdb776654f8696494.html  (+69 more)
skye_controls/doc/html/search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  search.js  (+26 more)
skye_controls/doc/latex/: annotated.tex  class_actions__skye.tex  class_pose_controller_node.tex  class_skye.tex  class_skye_geometric_controller.tex  class_waypoint_controller.tex  class_waypoints_parser.tex  classgazebo_1_1_gazebo_blimp_au_plugin.eps  classgazebo_1_1_gazebo_blimp_au_plugin.tex  classgazebo_1_1_gazebo_blimp_dynamics_plugin.eps  classgazebo_1_1_gazebo_blimp_dynamics_plugin.tex  classgazebo_1_1_gazebo_blimp_wrench_plugin.eps  classgazebo_1_1_gazebo_blimp_wrench_plugin.tex  classgazebo_1_1_gazebo_body_wrench.tex  classgazebo_1_1_transfer_function.tex  classskye__ros_1_1_skye_ros.tex  dir_0750887149e4dfb2b0723b1edc44f642.tex  dir_0885ed469d303dc95330699b83ca03b9.tex  dir_0aacf3aed1a5c7085b23ed9486273ee2.tex  dir_10845f92c03541d4c0858c20a249c16c.tex  dir_115b4d7181bb855be1b4efe6b1735dfd.tex  dir_18ae7af74d885898b85cbb543ae51b63.tex  dir_2548138e51ae2e82f035b0956dca7667.tex  dir_27e9bd539cc6454659407f6ca4a43990.tex  dir_2a447b880e2f99303417c746a5f7a57b.tex  dir_2d1642334f9e9ce4ca99f73941aaec31.tex  dir_3133b4fbd041a93fdb776654f8696494.tex  dir_43cb6afc0bab9ae3481c81931affed72.tex  dir_4489d0eaf2ea6a66872f8f9e7894dd55.tex  dir_46ec7577d28f6b9824aeee50f460634b.tex  dir_48a479cd6b93e2ad3dd4f53003dd6f88.tex  dir_497d6be7f66216537fbfff4e8c4b1223.tex  dir_4c62e68ac4b6268fd4a9563ba2605c8f.tex  dir_52260ea13e7692e578ce7e5b6348b5c9.tex  dir_564f046660ec63f18e2ef3affdb0877a.tex  dir_570e0db6e68ed9066242decff28913b9.tex  dir_5be5f51296b956b8630bff3884bdbc83.tex  dir_5d82ffaea57b776bc40865969f55fc87.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_69e30dd3b8655db4037ccfe7c981f8bc.tex  (+34 more)
skye_controls/include/skye_controls/: skye_geometric_controller.h  skye_position_controller.h  waypoint_controller.h
skye_controls/inputs/: skye_controls.yaml  waypoints.txt  waypoints.txt~
skye_controls/launch/: skye_controls.launch  skye_controls.launch~  start_tests.launch~
skye_controls/src/: main.cpp  skye_geometric_controller.cpp  skye_position_controller.cpp  skye_position_controller.h
skye_controls/src/node/: pose_control_node.cpp  pose_control_node.h  waypoints_parser.cpp  waypoints_parser.h
skye_gazebo/: CMakeLists.txt  package.xml
skye_gazebo/launch/: skye_empty_world.launch  spawn_skye.launch
skye_teach_and_repeat/: CMakeLists.txt  Doxyfile  package.xml
skye_teach_and_repeat/cfg/: skye_trparams.cfg
skye_teach_and_repeat/doc/html/: annotated.html  class_skye_teach_and_repeat-members.html  class_skye_teach_and_repeat.html  class_skye_teach_and_repeat_node-members.html  class_skye_teach_and_repeat_node.html  classes.html  dir_0aacf3aed1a5c7085b23ed9486273ee2.html  dir_0aacf3aed1a5c7085b23ed9486273ee2_dep.map  dir_0aacf3aed1a5c7085b23ed9486273ee2_dep.md5  dir_3a17ababa2f1390956efd0fb6d9b3a25.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  skye__teach__and__repeat_8h_source.html  skye__teach__and__repeat__node_8h_source.html  struct_skye_action-members.html  struct_skye_action.html  struct_skye_waypoint-members.html  struct_skye_waypoint.html
skye_teach_and_repeat/include/skye_teach_and_repeat/: skye_teach_and_repeat.h  skye_teach_and_repeat_node.h
skye_teach_and_repeat/inputs/: skye_teach_and_repeat.yaml
skye_teach_and_repeat/launch/: skye_teach_and_repeat.launch
skye_teach_and_repeat/src/: skye_teach_and_repeat_node.cpp
skye_tests/: CMakeLists.txt  package.xml  package.xml~  skye_tests.yaml  skye_tests.yaml~
skye_tests/include/skye_tests/: action_skye.h  poke_skye.h  skye.h
skye_tests/launch/: poke.launch~  start_tests.launch  start_tests.launch~
skye_tests/src/: action_skye.cpp  main.cpp  poke_skye.cpp  skye.cpp
(+63 files in other folders)
